test/files/neg/t7808.check
t7808.scala:5: error: recursive value ls needs type
    val (ls, rs) = z match {
         ^
1 error
